clusters/k8s-keiretsu/apps/media/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:latest
          ports:
            - name: http
              containerPort: 8096
              protocol: TCP
          volumeMounts:
            - name: tv-volume
              mountPath: /data/tvshows
            - name: movies-volume
              mountPath: /data/movies
            - name: config-volume
              mountPath: /config
      volumes:
        - name: tv-volume
          persistentVolumeClaim:
            claimName: sonarr-tv
        - name: movies-volume
          persistentVolumeClaim:
            claimName: radarr-movies
        - name: config-volume
          persistentVolumeClaim:
            claimName: jellyfin-config
