clusters/k8s-keiretsu/apps/media/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-tls
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: luke-issuer
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: jellyfin.lukehouge.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
  tls:
    - secretName: jellyfin-luke-tls
      hosts:
        - jellyfin.lukehouge.com
